@@ -1,6 +1,7 @@
 package epam.task.gymbootdb.controller.impl;
 
 import epam.task.gymbootdb.dto.TrainingTypeDto;
+import epam.task.gymbootdb.service.LoggingService;
 import epam.task.gymbootdb.service.TrainingTypeService;
 
 import org.junit.jupiter.api.Test;
@@ -9,12 +10,11 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -25,6 +25,8 @@ class TrainingTypeControllerImplTest {
 
     @Mock
     TrainingTypeService trainingTypeService;
+    @Mock
+    LoggingService loggingService;
 
     @Test
     void testGetAll() {
@@ -33,18 +35,10 @@ class TrainingTypeControllerImplTest {
 
         when(trainingTypeService.getAll()).thenReturn(trainingTypes);
 
-        ResponseEntity<List<TrainingTypeDto>> response = controller.getAll();
+        List<TrainingTypeDto> response = controller.getAll();
 
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertNotNull(response.getBody());
-        assertEquals(1, response.getBody().size());
-        assertEquals(yoga, response.getBody().get(0));
-    }
-
-    @Test
-    void testGetAllNoResponse() {
-        when(trainingTypeService.getAll()).thenThrow(new RuntimeException());
-
-        assertThrows(RuntimeException.class, () -> controller.getAll());
+        assertEquals(1, response.size());
+        assertEquals(yoga, response.getFirst());
+        verify(loggingService).logDebugController(anyString());
     }
 }
